# litecrypt

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: continuous-integration.yml
include/: aes.h  test.h
src/: _aes.h  _rot.h  aes.c  rot.c  test.c
tests/: main.c
